# esp32-icm7243a-rust

./: .envrc  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  cfg.toml.example  sdkconfig.defaults
.cargo/: config.toml
src/: circ.rs  display.rs  main.rs  wifi.rs
