[package]
name = "esp32-icm7243a"
version = "0.1.0"
authors = ["Andrey Kartashov <andrey.kartashov@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }

esp-idf-hal = { version = "0.40.1"}
esp-idf-svc = { version = "0.45.0", features = ["experimental"] }

anyhow = { version = "1.0.70", features = ["backtrace"] }
embedded-svc = { version = "0.24.0", features = ["futures", "experimental"] }
toml-cfg = "0.1.3"
log = { version = "0.4.17", features = ["std"] }
once_cell = "1.17.1"
num = "0.4.0"

[build-dependencies]
embuild = "0.31.1"
